# handle-finder

./: .gitignore  README.md  main.py  pyproject.toml
handlefinder/: __init__.py  extractor.py  handle_extractor.py  helpers.py  html_getter.py  session.py  url.py  url_extractor.py  url_getter.py  website.py
