[tool.poetry]
name = "handle-finder"
version = "0.1.0"
description = ""
authors = ["baroncurtin2 <baroncurtin2@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^21.4.0"
argparse = "^1.4.0"
requests = "^2.27.1"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
